[gd_scene load_steps=8 format=3 uid="uid://cxy2wkr77qtfl"]

[ext_resource type="Script" path="res://enemy/enemy.gd" id="1_8lvpl"]
[ext_resource type="Script" path="res://movement/velocity_component.gd" id="1_f11ad"]
[ext_resource type="PackedScene" uid="uid://ba3o6wranxgfb" path="res://combat/health_component.tscn" id="2_0f1q0"]
[ext_resource type="Script" path="res://combat/hurtbox_component.gd" id="3_nqemj"]
[ext_resource type="PackedScene" uid="uid://b7ypim4t8ele4" path="res://items/item_drop_component.tscn" id="4_p048s"]
[ext_resource type="Script" path="res://combat/hitbox_component.gd" id="5_03rxt"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jp4u5"]
size = Vector2(14, 24)

[node name="enemy" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 8
script = ExtResource("1_8lvpl")

[node name="Visuals" type="Node2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_jp4u5")

[node name="VelocityComponent" type="Node" parent="."]
script = ExtResource("1_f11ad")

[node name="HealthComponent" parent="." instance=ExtResource("2_0f1q0")]
max_health = 1.0

[node name="ItemDropComponent" parent="." instance=ExtResource("4_p048s")]

[node name="HurtboxComponent" type="Area2D" parent="." node_paths=PackedStringArray("health_component")]
collision_layer = 16
collision_mask = 16
script = ExtResource("3_nqemj")
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
shape = SubResource("RectangleShape2D_jp4u5")

[node name="HitboxComponent" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0
script = ExtResource("5_03rxt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("RectangleShape2D_jp4u5")
